# MSC

./: README.md  __init__.py  bootstrap_server.py  combo_server.py  combo_server_test.sh  combo_test.py  main.py  pyproject.toml  testServe.py
.devcontainer/: .bashrc  appBridge.py  devcontainer.json  provisioning.sh  setup.sh
server/: README.md  bootstrap_server.py  combo_server_test.sh  jsonrpc_server.py  test.txt
src/: FeatureSet.py  README.md  __init__.md  __init__.py  dslpy.py  hotquine.py  otherquine.py  server.py  serverTest.py  zoomer_wingdings.py
