[project]
name = "MSC"
description = "MSC: Morphological Source Code; semantic integration, syntax-lowering, & more."
authors = [{ name = "PHOVOS", email = "PHOVOS@outlook.com" }]
requires-python = ">=3.13"
version = "0.0.12"
readme = { file = "README.md", content-type = "text/markdown" }

[tool.msc]
version-file = "pyproject.toml"
build-script = ".devcontainer/provisioning.sh"

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "mypy",
    "nox",
    "pre-commit",
    "jupyterlab",
]

[project.scripts]
setup = "pip install -e .[dev]"
lint = "ruff ."
typecheck = "mypy ."
test = "pytest"

[tool.mypy]
python_version = "3.13"
strict = true
show_error_codes = true
disallow_untyped_defs = true
exclude = ["build/", "dist/", ".venv/"]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
exclude = ["build/", "dist/", ".venv/"]
extend-ignore = [
    "E501",  # line too long
    "W291",  # trailing whitespace
    "W293",  # blank line contains whitespace
    "W391",  # blank line at end of file
    "D206",  # docstring whitespace errors
    "D300",  # triple double quotes on one line
]

[tool.ruff.lint]
select = ["E", "F", "W", "B"]

[tool.ruff.format]
quote-style = "preserve"
skip-magic-trailing-comma = true
line-ending = "auto"

[tool.uv.workspace]
members = ["packages/*"]
exclude = ["packages/seeds"]

[tool.uv]
cache-keys = [{ file = "**/*.toml" }]